syntax = "proto3";

option csharp_namespace = "GrpcServiceMTwitter";

service Tweet {
  rpc PostTweet (TweetRequest) returns (TweetResponse);
  rpc GetLastNTweets(GetLastNTweetsRequest) returns (GetLastNTweetsResponse);
  rpc AuthenticateUser (UserCredentials) returns (AuthenticationResponse);
  rpc GetAllYourPost (GetLastNTweetsRequest) returns (GetLastNTweetsResponse);
}

message TweetRequest {
  string content = 1;
  string userName = 2;
}

message TweetResponse {
  string message = 1;
}

message GetLastNTweetsRequest {
    int32 count = 1;
}

message GetLastNTweetsResponse {
    repeated TweetRequest tweets = 1;
}

message AuthenticationResponse {
  bool isAuthenticated = 1;
  int32 id = 2;
}

message UserCredentials {
  string username = 1;
  string password = 2;
}
